syntax = "proto3";

package api.warningDetection.v1;

option go_package = "gitee.com/moyusir/data-processing/api/dataProcessing/v1;v1";
option java_multiple_files = true;
option java_package = "api.warningDetection.v1";
// 配置管理服务，主要为配置查询
service ConfigService {
	rpc GetDeviceConfig(GetDeviceConfigRequest)returns (DeviceConfig);
}
// 配置查询请求
message GetDeviceConfigRequest{
	// 所属用户id
	string id=1;
	// 设备类别号
	int64 device_class_id=2;
	// 设备id
	int64 device_id=3;
}
// 配置信息模板
message DeviceConfig{
	int64 id=1;
}